# PicoDVI

software/: CMakeLists.txt
software/apps/terminal/: CMakeLists.txt  main.c
software/assets/: font_8x16.h  font_8x16x95.h
software/include/: common_dvi_pin_configs.h
software/lib6502/: 6502bus.pio  CMakeLists.txt  bus6502.c  bus6502.pio
software/scripts/: font_test.py  new_font_create.py
